// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack vault 1password given: [case2] repo with 1password vault configured when: [t0] keyrack list --json then: stdout matches snapshot 1`] = `
{
  "testorg.test.ONEPASSWORD_TEST_KEY": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": "op://test-vault/test-item/credential",
    "maxDuration": null,
    "mech": "PERMANENT_VIA_REFERENCE",
    "org": "testorg",
    "slug": "testorg.test.ONEPASSWORD_TEST_KEY",
    "updatedAt": "__TIMESTAMP__",
    "vault": "1password",
    "vaultRecipient": null,
  },
}
`;

exports[`keyrack vault 1password given: [case2] repo with 1password vault configured when: [t1] keyrack list (human readable) then: stdout matches snapshot 1`] = `
"
🔐 keyrack list
   └─ testorg.test.ONEPASSWORD_TEST_KEY
      ├─ env: test
      ├─ org: testorg
      ├─ mech: PERMANENT_VIA_REFERENCE
      └─ vault: 1password
"
`;

exports[`keyrack vault 1password given: [case3] 1password keys require unlock when: [t0] get without unlock then: stdout matches snapshot 1`] = `
{
  "fix": "rhx keyrack set --key ONEPASSWORD_TEST_KEY --env test",
  "message": "credential 'testorg.test.ONEPASSWORD_TEST_KEY' does not exist. set it first.",
  "slug": "testorg.test.ONEPASSWORD_TEST_KEY",
  "status": "absent",
}
`;

exports[`keyrack vault 1password with EPHEMERAL_VIA_GITHUB_APP given: [case1] guided setup with mock gh CLI and mock op CLI when: [t0] keyrack set --vault 1password --mech EPHEMERAL_VIA_GITHUB_APP via guided wizard (pseudo-TTY) then: stdout matches snapshot 1`] = `
"🔐 keyrack set testorg.test.GITHUB_TOKEN via EPHEMERAL_VIA_GITHUB_APP
   │
   ├─ which github org?
   │  ├─ options
   │  │  ├─ 1. testorg
   │  │  ├─ 2. otherorg
   │  └─ choice: 1
   │     └─ testorg ✓
   │
   ├─ which github app?
   │  ├─ options
   │  │  ├─ 1. my-test-app (id: 123456)
   │  │  ├─ 2. other-app (id: 654321)
   │  └─ choice: 1
   │     └─ my-test-app ✓
   │
   ├─ which github app secret?
   │  └─ private key path (.pem): ./mock-app.pem
   │
   ├─ where to store in 1password?
   │  ├─ create item in 1password app first
   │  │  ├─ e.g., "Secure Note" named GITHUB_APP_CREDS
   │  │  └─ then right-click field → "Copy Secret Reference"
   │  └─ paste the uri below
   │     └─ op://test-vault/github-app/credential
   │
   └─ perfect, now lets verify...
      └─ ✓ roundtrip verified
⠀
🔐 keyrack set (org: testorg, env: test)
   └─ testorg.test.GITHUB_TOKEN
      ├─ mech: EPHEMERAL_VIA_GITHUB_APP
      └─ vault: 1password"
`;

exports[`keyrack vault 1password with EPHEMERAL_VIA_GITHUB_APP given: [case1] guided setup with mock gh CLI and mock op CLI when: [t1] keyrack list --json after guided set then: stdout matches snapshot 1`] = `
{
  "testorg.test.GITHUB_TOKEN": {
    "createdAt": "__TIMESTAMP__",
    "env": "test",
    "exid": "op://test-vault/github-app/credential",
    "maxDuration": null,
    "mech": "EPHEMERAL_VIA_GITHUB_APP",
    "org": "testorg",
    "slug": "testorg.test.GITHUB_TOKEN",
    "updatedAt": "__TIMESTAMP__",
    "vault": "1password",
    "vaultRecipient": null,
  },
}
`;
